# rebet_frog

./: .gitignore  CMakeLists.txt  README.md  frog.rosinstall  package.xml
PRISM_models/: base_model.pm  mdp_adaptation_strategy.py  mdp_base_model.pm  old_speed_model.pm
PRISM_models/detect_markov_chain/: base_model.pm  properties.pctl
PRISM_models/detect_mdp/: base_model.pm
PRISM_models/markov_chain/: base_model.pm  properties.pctl  required_vars.txt  utility_function.py
PRISM_models/markov_chain_example/: properties.pctl  required_vars.txt  utility_function.py
PRISM_models/max_speed_markov_chain/: base_model.pm  properties.pctl  utility_function.py
PRISM_models/max_speed_mdp/: base_model.pm  property.pctl
PRISM_models/mdp/: base_model.pm  property.pctl
config/: 3_hydrants.pgm  3_hydrants.yaml  3_hydrants_map.pgm  3_hydrants_map.yaml  6_hydrants_map.pgm  6_hydrants_map.yaml  9_hydrants_map.pgm  9_hydrants_map.yaml  acsos2024_map.yaml  frog_config.yaml  frog_default_view.rviz  frog_nav2_params.yaml
include/rebet_frog/: filter_obstacles.h  frog_adapt_nodes.h  frog_constants.hpp  frog_qrs.h  toad_adapt_nodes.h  toad_constants.hpp  toad_qrs.h
launch/: adaptation_system_config_launch.py  arborist_config_launch.py  custom_world.launch.py  fortress_tb3.launch.py  nav2_map_launch.py  navigation_launch.py  spawn_tb3.launch.py  take_pictures_launch.py  yolo_self_start_launch.py
models/Urban Service Room Straight Lights/: metadata.pbtxt  model.config  model.sdf
models/fire_hydrant_small/meshes/: fire_hydrant.dae
scripts/: pictures_as_a_service.py  report_on_experiment.py  system_reflection.py  tree_action_client.py  yolo_as_a_service.py
src/: detect_service.cpp  find_frontier_service.cpp  frog_arborist.cpp  get_map_service.cpp  gotopose_action.cpp  initial_pose_pub.cpp  robot_pose_sub.cpp  take_pictures.cpp  visitobstacle_action.cpp
trees/: frog_aal.xml  frog_aal_arch_baseline.xml  frog_aal_arch_external.xml  frog_aal_arch_full.xml  frog_aal_arch_internal.xml  frog_task_based.xml  frontier_exploration.xml  toad.xml  toad_conservative.xml  toad_greedy.xml  toad_prism.xml  toad_random.xml
worlds/: acsos2024.world  comparison.sdf  service.sdf  test2.sdf  test3.sdf  test4.sdf  walls.sdf
